kubernetes/core/longhorn/app/resources/DaemonSet--core-longhorn--longhorn-manager-resources-patch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-manager
  namespace: core-longhorn
spec:
  template:
    spec:
      containers:
        - name: pre-pull-share-manager-image
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 64Mi
