kubernetes/core/longhorn/app/resources/Deployment--core-longhorn--longhorn-ui-resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-ui
  namespace: core-longhorn
spec:
  template:
    spec:
      containers:
        - name: longhorn-ui
          resources:
            requests:
              cpu: 20m
              memory: 96Mi
            limits:
              memory: 96Mi
