kubernetes/core/longhorn/app/resources/IngressRoute--core-longhorn--longhorn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: core-longhorn
spec:
  routes:
    - kind: Rule
      match: Host(`longhorn.rcwz.pl`)
      middlewares:
        - name: oidc
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80

  tls:
    secretName: certificate-longhorn
